cluster/apps/database/cloudnative-pg/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudnative-pg
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
