cluster/apps/database/cloudnative-pg/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-authentik-to-cloudnative-pg"
  namespace: cloudnative-ng
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
